--- a/app/toura/styles/page_defs/_image-list.scss
+++ b/app/toura/styles/page_defs/_image-list.scss
@@ -5,38 +5,5 @@
 
   .component.body-text {
     padding: 10px;
-    
-    .tablet & {
-      padding: 20px;
-    }
-  }
-
-  .tablet & {
-    .main-content {
-      .inner {
-        @include flex-row-container;
-
-        .component {
-          &.page-header-image,
-          &.child-nodes {
-            -webkit-box-ordinal-group: 1;
-          }
-
-          &.body-text {
-            -webkit-box-ordinal-group: 2;
-          }
-
-          &.child-nodes,
-          &.body-text {
-            width: 82.5%;
-
-            @media (min-width: 800px) {
-              width: 62.5%;
-              margin-left: 12.5%;
-            }
-          }
-        }
-      }
-    }
   }
 }
